--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-static": "^1.2.6",
+    "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "node-base64-image": "^2.0.4",
     "node-postgres": "^0.6.2",
     "nodemailer": "^6.7.6",
     "pm2": "^5.2.0",
-    "save": "^2.5.0"
+    "save": "^2.5.0",
+    "urllib": "^3.1.2"
   }
 }
